Add core logic
